added prediction direction

--- a/main_test.ipynb
+++ b/main_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3ca6f2ff-323d-4d57-95ef-8ca6a2062a91",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.610935246721674\n"
+      "58.203575578544246 short\n"
      ]
     }
    ],
@@ -33,14 +33,14 @@
     "    \n",
     "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "    #form prediction and obtain trade size\n",
-    "    trade_size=form_prediction(open_data,close_data,high_data,low_data,td_days,device) #still need to add prediction value/direction\n",
-    "    print(trade_size)"
+    "    trade_size, direction=form_prediction(open_data,close_data,high_data,low_data,td_days,device)\n",
+    "    print(trade_size,direction)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73cc58f2-21db-4758-b8c4-9bbe57fb26d7",
+   "id": "4aab54d4-346a-485d-b719-75799b270d9e",
    "metadata": {},
    "outputs": [],
    "source": []
